@@ -1,6 +1,6 @@
 {
-  "count": 14,
-  "uniques": 3,
+  "count": 15,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2022-04-05T00:00:00Z",
@@ -19,8 +19,8 @@
     },
     {
       "timestamp": "2022-04-18T00:00:00Z",
-      "count": 3,
-      "uniques": 1
+      "count": 4,
+      "uniques": 2
     }
   ]
 }
