@@ -1,3 +1,9 @@
+2022-04-19T00:24:09Z:
+* notice: last 14d: all unq: 15 4
+* notice: prev accum: outdated-all outdated-unq / all unq: 272 52 / 286 56
+* notice: next accum: outdated-all outdated-unq / all unq: 272 52 / 287 57
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-18T16:06:51Z:
 * notice: last 14d: all unq: 14 3
 * notice: prev accum: outdated-all outdated-unq / all unq: 272 52 / 283 55
